@@ -16,9 +16,10 @@ DESIGN ISSUES
 
 HIGH PRIORITY
 - add shape for E-field
-- shape of bottom wire needs to subtract bottom capacitor plate shape
 - make probes work on flattened 2D version of image; if you can see it, you can touch it with a probe
 - address stroke issue in WireSegment.createShape
+- WireNode gets shapes from Wire, which has a Shape property, this pattern is different
+- hack in BottomWire
 
 MEDUIUM PRIORITY
 - wires don't connect to battery terminals perfectly
